finished confirmation message display

--- a/style.css
+++ b/style.css
@@ -120,3 +120,16 @@ nav ul li a:hover, a.active{
     display: flex;
     justify-content: space-between;
 }
+.confirmation{
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    background-color: #F3F5FF   ;
+    border-radius: 10px;
+    display: none;
+    width: 100%;
+    
+}
+.confirmation span{
+    color: #3352F2;
+}
