--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ body{
     background-attachment: scroll;
     background-size: cover;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 nav{
     height: 50px;
     width: 100%;
@@ -66,11 +70,12 @@ nav ul li a:hover, a.active{
     min-width: 300px;
 }
 .plus-minus-btn{
-    color: #3352F2;
-    font-size: 30px;
-    padding: 2px;
-    margin-top: 10px;
+    margin-top: 15px;
     word-spacing: 20px;
+}
+.plus-minus-btn i {
+    font-size: 25px;
+    color: #3352F2;
 }
 .booking-form  .calculations{
     margin: 10px 0;
